--- a/DogT/Views/DogHandler/Index.cshtml
+++ b/DogT/Views/DogHandler/Index.cshtml
@@ -40,11 +40,11 @@
                 @Html.DisplayFor(modelItem => item.DogHandlerId)
             </td>
             <td>
-                @Html.DisplayFor(modelItem => item.Specialization.Id)
+                @Html.DisplayFor(modelItem => item.Specialization.Title)
             </td>
             <td>
                 <a asp-action="Edit" asp-route-id="@item.Id">Edit</a> |
-                <a asp-action="Details" asp-route-id="@item.Id">Details</a> |
+                <a asp-action="DetailsDog" asp-route-id="@item.Id">Деталі</a> |
                 <a asp-action="Delete" asp-route-id="@item.Id">Delete</a>
             </td>
         </tr>
