a lot of things

--- a/DogT/Views/DogHandler/Index.cshtml
+++ b/DogT/Views/DogHandler/Index.cshtml
@@ -4,11 +4,16 @@
     ViewData["Title"] = "Index";
 }
 
-<h1>Index</h1>
+<h3>Особистий кабінет кінолога</h3>
 
-<p>
-    <a asp-action="AddDog">Додати нового собаку</a>
-</p>
+<ul>
+    <li>
+        <a asp-action="AddDog">Додати нового собаку</a>
+    </li>
+    <li>
+        <a asp-action="Trainings">Тренування</a>
+    </li>
+</ul>
 <table class="table">
     <thead>
         <tr>
