--- a/DogT/Views/Shared/_Layout.cshtml
+++ b/DogT/Views/Shared/_Layout.cshtml
@@ -24,6 +24,14 @@
                         <li class="nav-item">
                             <a class="nav-link text-dark" asp-area="" asp-controller="Home" asp-action="Privacy">Privacy</a>
                         </li>
+                        @if (User.Identity.IsAuthenticated)
+                        {
+                            <li class="nav-item">
+                                <form asp-controller="Account" asp-action="Logout">
+                                    <input type="submit" value="Вихід"/>
+                                </form>
+                            </li>
+                        }
                     </ul>
                 </div>
             </div>
