--- a/DogT/Views/DogHandler/AddTraining.cshtml
+++ b/DogT/Views/DogHandler/AddTraining.cshtml
@@ -1,21 +1,16 @@
 ﻿@model DogT.Models.Training
 
 @{
-    ViewData["Title"] = "AddTraining";
+    ViewData["Title"] = "Додати нове тренування";
 }
 
-<h1>AddTraining</h1>
+<h3>Додати нове тренування</h3>
 
-<h4>Training</h4>
 <hr />
 <div class="row">
     <div class="col-md-4">
         <form asp-action="AddTraining">
             <div asp-validation-summary="ModelOnly" class="text-danger"></div>
-            @*<div class="form-group">
-                <label asp-for="DogHandlerId" class="control-label"></label>
-                <select asp-for="DogHandlerId" class ="form-control" asp-items="ViewBag.DogHandlerId"></select>
-            </div>*@
             <div class="form-group">
                 <label asp-for="DogId" class="control-label"></label>
                 <select asp-for="DogId" class ="form-control" asp-items="ViewBag.Dogs"></select>
@@ -40,13 +35,13 @@
                 <span asp-validation-for="Date" class="text-danger"></span>
             </div>
             <div class="form-group">
-                <input type="submit" value="Create" class="btn btn-primary" />
+                <input type="submit" value="Додати" class="btn btn-primary" />
             </div>
         </form>
     </div>
 </div>
 
 <div>
-    <a asp-action="Index">Back to List</a>
+    <a asp-action="Index">Назад до кабінету</a>
 </div>
 
