--- a/DogT/Views/DogHandler/Index.cshtml
+++ b/DogT/Views/DogHandler/Index.cshtml
@@ -24,10 +24,7 @@
                 @Html.DisplayNameFor(model => model.Age)
             </th>
             <th>
-                @Html.DisplayNameFor(model => model.DogHandlerId)
-            </th>
-            <th>
-                @Html.DisplayNameFor(model => model.Specialization)
+                @Html.DisplayNameFor(model => model.Specialization.Title)
             </th>
             <th></th>
         </tr>
@@ -40,10 +37,6 @@
             </td>
             <td>
                 @Html.DisplayFor(modelItem => item.Age)
-            </td>
-            <td>
-                @Html.DisplayFor(modelItem => item.DogHandler.Name)
-                @Html.DisplayFor(modelItem => item.DogHandler.Surname)
             </td>
             <td>
                 @Html.DisplayFor(modelItem => item.Specialization.Title)
