--- a/DogT/Views/DogHandler/Trainings.cshtml
+++ b/DogT/Views/DogHandler/Trainings.cshtml
@@ -49,9 +49,9 @@
                 @Html.DisplayFor(modelItem => item.Date)
             </td>
             <td>
-                <a asp-action="Edit" asp-route-id="@item.Id">Edit</a> |
-                <a asp-action="Details" asp-route-id="@item.Id">Details</a> |
-                <a asp-action="Delete" asp-route-id="@item.Id">Delete</a>
+                <a asp-action="EditTraining" asp-route-id="@item.Id">Редагувати</a> |
+                <a asp-action="DetailsTraining" asp-route-id="@item.Id">Деталі</a> |
+                <a asp-action="DeleteTraining" asp-route-id="@item.Id">Видалити</a>
             </td>
         </tr>
 }
