ability to comment

--- a/DogT/Views/DogHandler/DetailsTraining.cshtml
+++ b/DogT/Views/DogHandler/DetailsTraining.cshtml
@@ -1,4 +1,4 @@
-﻿@model DogT.Models.Training
+﻿@model DogT.ViewModels.TrainingViewModel
 
 @{
     ViewData["Title"] = "DetailsTraining";
@@ -8,37 +8,49 @@
 
 <div>
     <dl class="row">
-        <dt class = "col-sm-2">
+        <dt class="col-sm-2">
             @Html.DisplayNameFor(model => model.Dog)
         </dt>
-        <dd class = "col-sm-10">
+        <dd class="col-sm-10">
             @Html.DisplayFor(model => model.Dog.Name)
         </dd>
-        <dt class = "col-sm-2">
+        <dt class="col-sm-2">
             @Html.DisplayNameFor(model => model.Specialization)
         </dt>
-        <dd class = "col-sm-10">
+        <dd class="col-sm-10">
             @Html.DisplayFor(model => model.Specialization.Title)
         </dd>
-        <dt class = "col-sm-2">
+        <dt class="col-sm-2">
             @Html.DisplayNameFor(model => model.Context)
         </dt>
-        <dd class = "col-sm-10">
+        <dd class="col-sm-10">
             @Html.DisplayFor(model => model.Context)
         </dd>
-        <dt class = "col-sm-2">
+        <dt class="col-sm-2">
             @Html.DisplayNameFor(model => model.Estimate)
         </dt>
-        <dd class = "col-sm-10">
+        <dd class="col-sm-10">
             @Html.DisplayFor(model => model.Estimate)
         </dd>
-        <dt class = "col-sm-2">
+        <dt class="col-sm-2">
             @Html.DisplayNameFor(model => model.Date)
         </dt>
-        <dd class = "col-sm-10">
+        <dd class="col-sm-10">
             @Html.DisplayFor(model => model.Date)
         </dd>
     </dl>
+    <h6>Коментарі до тренування: </h6>
+    
+    @foreach (var item in Model.Comments)
+    {
+        <p>@item.CommentContext - @item.Date</p>
+    }
+
+    <form asp-action="LiveComment" asp-route-id="@Model.Id">
+        <input type="text" asp-for="CommentContext"/>
+        <input type="submit" value="Коментувати" />
+    </form>
+
 </div>
 <div>
     <a asp-action="EditTraining" asp-route-id="@Model.Id">Редагувати</a> |
