--- a/DogT/Views/DogHandler/TrainingTasks.cshtml
+++ b/DogT/Views/DogHandler/TrainingTasks.cshtml
@@ -49,9 +49,16 @@
                 @Html.DisplayFor(modelItem => item.IsCompleted)
             </td>
             <td>
-                <a asp-action="Edit" asp-route-id="@item.Id">Edit</a> |
-                <a asp-action="Details" asp-route-id="@item.Id">Details</a> |
-                <a asp-action="Delete" asp-route-id="@item.Id">Delete</a>
+                @if (item.IsCompleted != true)
+                {
+                    <form asp-action="TaskCompleted" asp-route-id="@item.Id">
+                        <input type="submit" value="Виконано" />
+                    </form>
+                }
+                else
+                {
+                    <a asp-action="Delete" asp-route-id="@item.Id">В архів</a>
+                }
             </td>
         </tr>
 }
