--- a/DogT/Views/DogHandler/AddTraining.cshtml
+++ b/DogT/Views/DogHandler/AddTraining.cshtml
@@ -9,7 +9,7 @@
 <hr />
 <div class="row">
     <div class="col-md-4">
-        <form asp-action="AddTraining">
+        <form asp-action="AddTraining" enctype="multipart/form-data">
             <div asp-validation-summary="ModelOnly" class="text-danger"></div>
             <div class="form-group">
                 <label asp-for="DogId" class="control-label"></label>
@@ -34,6 +34,7 @@
                 <input asp-for="Date" class="form-control" />
                 <span asp-validation-for="Date" class="text-danger"></span>
             </div>
+            <input name="formFile" type="file" class="form-control" />
             <div class="form-group">
                 <input type="submit" value="Додати" class="btn btn-primary" />
             </div>
