--- a/DogT/Views/Admin/EditDog.cshtml
+++ b/DogT/Views/Admin/EditDog.cshtml
@@ -10,8 +10,8 @@
     <div class="col-md-4">
         <form asp-action="EditDog">
             <div asp-validation-summary="ModelOnly" class="text-danger"></div>
-            <input type="hidden" asp-for="Id" value="@Model.Id"/>
-            <input type="hidden" asp-for="DogHandlerId" value="@Model.DogHandlerId"/>
+            <input type="hidden" asp-for="Id" value="@Model.Id" />
+            <input type="hidden" asp-for="DogHandlerId" value="@Model.DogHandlerId" />
             <div class="form-group">
                 <label asp-for="Name" class="control-label"></label>
                 <input asp-for="Name" class="form-control" />
@@ -22,18 +22,18 @@
                 <input asp-for="Age" class="form-control" />
                 <span asp-validation-for="Age" class="text-danger"></span>
             </div>
-            @*<div class="form-group">
+            <div class="form-group">
                 <label asp-for="DogHandlerId" class="control-label"></label>
-                <select asp-for="DogHandlerId" class="form-control" asp-items="ViewBag.DogHandlerId"></select>
+                <select asp-for="DogHandlerId" class="form-control" asp-items="ViewBag.DogHandlers"></select>
                 <span asp-validation-for="DogHandlerId" class="text-danger"></span>
-            </div>*@
+            </div>
             <div class="form-group">
                 <label asp-for="SpecializationId" class="control-label"></label>
                 <select asp-for="SpecializationId" class="form-control" asp-items="ViewBag.Specializations"></select>
                 <span asp-validation-for="SpecializationId" class="text-danger"></span>
             </div>
             <div class="form-group">
-                <input type="submit" value="Save" class="btn btn-primary" />
+                <input type="submit" value="Зберегти" class="btn btn-primary" />
             </div>
         </form>
     </div>
@@ -42,4 +42,3 @@
 <div>
     <a asp-action="Dogs">До списку собак</a>
 </div>
-
