--- a/DogT/Views/Admin/EditDog.cshtml
+++ b/DogT/Views/Admin/EditDog.cshtml
@@ -2,6 +2,7 @@
 
 @{
     ViewData["Title"] = "Редагувати інформацію про собаку";
+    Layout = "_Admin";
 }
 
 <h4>Редагувати інформацію про собаку</h4>
