--- a/DogT/Views/Admin/Index.cshtml
+++ b/DogT/Views/Admin/Index.cshtml
@@ -2,19 +2,8 @@
 
 @{
     ViewData["Title"] = "Кабінет адміністратора";
+    Layout = "_Admin";
 }
-
-<ul>
-    <li>
-        <a asp-action="Dogs">Собаки</a>
-    </li>
-    <li>
-        <a asp-action="Dogs">Завдання</a>
-    </li>
-    <li>
-        <a asp-action="Dogs">Тренування</a>
-    </li>
-</ul>
 
 <h3>Список кінологів</h3>
 
