--- a/DogT/Views/DogHandler/ExcludeDog.cshtml
+++ b/DogT/Views/DogHandler/ExcludeDog.cshtml
@@ -2,6 +2,7 @@
 
 @{
     ViewData["Title"] = "Вилучити собаку";
+    Layout = "_DogHandler";
 }
 
 <h3>Дійсно хочеш відмовитись від цього собаки</h3>
