--- a/DogT/Views/Account/Login.cshtml
+++ b/DogT/Views/Account/Login.cshtml
@@ -2,25 +2,27 @@
 
 @{
     ViewData["Title"] = "Авторизація";
+    Layout = "_Authorization";
 }
 
-<h3>Авторизація</h3>
-
-<form asp-action="Login" asp-controller="Account" asp-anti-forgery="true">
-    <div class="validation" asp-validation-summary="ModelOnly"></div>
+<div class="account">
+    <h4 class="account_head">Авторизація в кінологічній платформі</h4>
+    
     <div>
-        <div>
-            <label asp-for="Email">Емейл</label><br />
-            <input type="text" asp-for="Email" />
-            <span asp-validation-for="Email" />
-        </div>
-        <div>
-            <label asp-for="Password">Пароль</label><br />
-            <input asp-for="Password" />
-            <span asp-validation-for="Password" />
-        </div>
-        <div>
-            <input type="submit" value="Авторизація" />
-        </div>
+        <form asp-action="Login" asp-controller="Account" asp-anti-forgery="true">
+            <div asp-validation-summary="ModelOnly" class="text-danger"></div>
+            <div class="form-group">
+                <input asp-for="Email" placeholder="Емейл" class="form-control" />
+                <span asp-validation-for="Email" class="text-danger"></span>
+            </div>
+            <div class="form-group">
+                <input asp-for="Password" placeholder="Пароль" class="form-control" />
+                <span asp-validation-for="Password" class="text-danger"></span>
+            </div>
+            <div class="form-group">
+                <input type="submit" value="Авторизація" class="btn btn-primary" />
+            </div>
+        </form>
     </div>
-</form>
+    
+</div>
