--- a/DogT/Views/DogHandler/Dogs.cshtml
+++ b/DogT/Views/DogHandler/Dogs.cshtml
@@ -5,43 +5,21 @@
     Layout = "_DogHandler";
 }
 
-<h3>Твої собаки</h3>
-<a asp-action="AddDog">Додати нового собаку</a>
+<div class="dogs">
+    <a asp-action="AddDog" class="dog">
+        <div class="dog_img">
+            <i class="fas fa-plus empty_dog_img"></i>
+        </div>
+        <h6 class="dog_title">Додати собаку</h6>
+    </a>
 
-<table class="table">
-    <thead>
-        <tr>
-            <th>
-                @Html.DisplayNameFor(model => model.Name)
-            </th>
-            <th>
-                @Html.DisplayNameFor(model => model.Age)
-            </th>
-            <th>
-                @Html.DisplayNameFor(model => model.Specialization.Title)
-            </th>
-            <th></th>
-        </tr>
-    </thead>
-    <tbody>
-        @foreach (var item in Model)
-        {
-            <tr>
-                <td>
-                    @Html.DisplayFor(modelItem => item.Name)
-                </td>
-                <td>
-                    @Html.DisplayFor(modelItem => item.Age)
-                </td>
-                <td>
-                    @Html.DisplayFor(modelItem => item.Specialization.Title)
-                </td>
-                <td>
-                    <a asp-action="EditDog" asp-route-id="@item.Id">Редагувати інформацію</a> |
-                    <a asp-action="DetailsDog" asp-route-id="@item.Id">Деталі</a> |
-                    <a asp-action="ExcludeDog" asp-route-id="@item.Id">Вилучити</a>
-                </td>
-            </tr>
-        }
-    </tbody>
-</table>
+    @foreach (var dog in Model)
+    {
+        <a class="dog" asp-action="DetailsDog" asp-route-id="@dog.Id">
+            <div class="dog_img">
+                <i class="fas fa-dog empty_dog_img"></i>
+            </div>
+            <h6 class="dog_title">@dog.Name</h6>
+        </a>
+    }
+</div>
