--- a/DogT/Views/DogHandler/Index.cshtml
+++ b/DogT/Views/DogHandler/Index.cshtml
@@ -5,16 +5,4 @@
     Layout = "_DogHandler";
 }
 
-<h3>Особистий кабінет кінолога</h3>
-
-<ul>
-    <li>
-        <a asp-action="Dogs">Закріплені собаки</a>
-    </li>
-    <li>
-        <a asp-action="Trainings">Тренування</a>
-    </li>
-    <li>
-        <a asp-action="TrainingTasks">Завдання</a>
-    </li>
-</ul>
+<h4>Главная страница</h4>
