--- a/DogT/Views/Account/Login.cshtml
+++ b/DogT/Views/Account/Login.cshtml
@@ -23,6 +23,7 @@
                 <input type="submit" value="Авторизація" class="btn btn-primary" />
             </div>
         </form>
+        <a asp-controller="Account" asp-action="Register">Реєстрація</a>
     </div>
     
 </div>
