--- a/DogT/Views/DogHandler/Index.cshtml
+++ b/DogT/Views/DogHandler/Index.cshtml
@@ -5,4 +5,9 @@
     Layout = "_DogHandler";
 }
 
-<h4>Главная страница</h4>
+<a asp-action="AddTraining" class="dog">
+    <div class="dog_img">
+        <i class="fas fa-plus empty_dog_img"></i>
+    </div>
+    <h6 class="dog_title">Додати тренування</h6>
+</a>
