--- a/DogT/Views/DogHandler/AddDog.cshtml
+++ b/DogT/Views/DogHandler/AddDog.cshtml
@@ -10,7 +10,7 @@
 <hr />
 <div class="row">
     <div class="col-md-4">
-        <form asp-action="AddDog">
+        <form asp-action="AddDog" enctype="multipart/form-data">
             <div asp-validation-summary="ModelOnly" class="text-danger"></div>
             <div class="form-group">
                 <label asp-for="Name" class="control-label"></label>
@@ -25,6 +25,9 @@
             <div class="form-group">
                 <label asp-for="SpecializationId" class="control-label"></label>
                 <select asp-for="SpecializationId" class ="form-control" asp-items="ViewBag.Specializations"></select>
+            </div>
+            <div class="form-group">
+                <input name="formFile" type="file" class="form-control" />
             </div>
             <div class="form-group">
                 <input type="submit" value="Додати" class="btn btn-primary" />
