still working on view

--- a/DogT/Views/DogHandler/DetailsDog.cshtml
+++ b/DogT/Views/DogHandler/DetailsDog.cshtml
@@ -69,9 +69,9 @@
     <table class="table">
         <thead class="thead-dark">
             <tr>
-                <th scope="col">№</th>
-                <th scope="col">Дата заняття</th>
-                <th scope="col">Результат/Оцінка</th>
+                <th scope="col" class="training_table_num">№</th>
+                <th scope="col" class="training_table_date">Дата</th>
+                <th scope="col" class="training_table_estimate">Результат</th>
             </tr>
         </thead>
         <tbody>
