fix excluding dog with trainings and comments

--- a/DogT/Views/DogHandler/AddDog.cshtml
+++ b/DogT/Views/DogHandler/AddDog.cshtml
@@ -27,6 +27,7 @@
                 <select asp-for="SpecializationId" class ="form-control" asp-items="ViewBag.Specializations"></select>
             </div>
             <div class="form-group">
+                <label class="control-label">Фото</label>
                 <input name="formFile" type="file" class="form-control" />
             </div>
             <div class="form-group">
