--- a/DogT/Views/DogHandler/AddTraining.cshtml
+++ b/DogT/Views/DogHandler/AddTraining.cshtml
@@ -31,7 +31,10 @@
                 <input asp-for="Date" class="form-control" />
                 <span asp-validation-for="Date" class="text-danger"></span>
             </div>
-            <input name="formFile" type="file" class="form-control" />
+            <div class="form-group">
+                <label class="control-label">Відео</label>
+                <input name="formFile" type="file" />
+            </div>
             <div class="form-group">
                 <input type="submit" value="Додати" class="btn btn-primary" />
             </div>
