--- a/DogT/Views/DogHandler/EditDog.cshtml
+++ b/DogT/Views/DogHandler/EditDog.cshtml
@@ -34,6 +34,12 @@
                 <span asp-validation-for="SpecializationId" class="text-danger"></span>
             </div>
             <div class="form-group">
+                <input asp-for="Avatar" type="hidden" value="@Model.Avatar" />
+            </div>
+            <div class="form-group">
+                <input asp-for="AvatarPath" type="hidden" value="@Model.AvatarPath" />
+            </div>
+            <div class="form-group">
                 <input type="submit" value="Зберегти" class="btn btn-primary" />
             </div>
         </form>
