adding training tasks

--- a/DogT/Views/DogHandler/EditDog.cshtml
+++ b/DogT/Views/DogHandler/EditDog.cshtml
@@ -47,6 +47,6 @@
 </div>
 
 <div>
-    <a asp-action="Dogs">До списку собак</a>
+    <a asp-action="DetailsDog" asp-route-id="@Model.Id">Назад</a>
 </div>
 
