--- a/DogT/Views/DogHandler/TrainingTasks.cshtml
+++ b/DogT/Views/DogHandler/TrainingTasks.cshtml
@@ -5,63 +5,90 @@
     Layout = "_DogHandler";
 }
 
-<h3>Завдання</h3>
+<div class="page_title">
+    <h3>Завдання</h3>
+</div>
 
-<p>
-    <a asp-action="Create">Create New</a>
-</p>
-<table class="table">
-    <thead>
-        <tr>
-            <th>
-                @Html.DisplayNameFor(model => model.Dog)
-            </th>
-            <th>
-                @Html.DisplayNameFor(model => model.Context)
-            </th>
-            <th>
-                @Html.DisplayNameFor(model => model.Date)
-            </th>
-            <th>
-                @Html.DisplayNameFor(model => model.Deadline)
-            </th>
-            <th>
-                @Html.DisplayNameFor(model => model.IsCompleted)
-            </th>
-            <th></th>
-        </tr>
-    </thead>
-    <tbody>
-@foreach (var item in Model) {
-        <tr>
-            <td>
-                @Html.DisplayFor(modelItem => item.Dog.Name)
-            </td>
-            <td>
-                @Html.DisplayFor(modelItem => item.Context)
-            </td>
-            <td>
-                @Html.DisplayFor(modelItem => item.Date)
-            </td>
-            <td>
-                @Html.DisplayFor(modelItem => item.Deadline)
-            </td>
-            <td>
-                @Html.DisplayFor(modelItem => item.IsCompleted)
-            </td>
-            <td>
-                @if (item.IsCompleted != true)
+<div class="trainingTasks">
+    <table class="table">
+        <thead class="thead-dark">
+            <tr>
+                <th scope="col" class="training_table_num">№</th>
+                <th scope="col" class="training_table_date">Дата початку</th>
+                <th scope="col" class="training_table_estimate">Собака</th>
+                <th scope="col" class="training_table_estimate">Зміст</th>
+                <th scope="col" class="training_table_estimate">Крайній термін</th>
+                <th scope="col" class="training_table_estimate">Статус</th>
+            </tr>
+        </thead>
+        <tbody>
+            @if (Model.Count() == 0)
+            {
+                <tr>
+                    <td>Завдання відсутні</td>
+                </tr>
+            }
+            else
+            {
+                var num = 1;
+                foreach (var trainingTask in Model)
                 {
-                    <form asp-action="TaskCompleted" asp-route-id="@item.Id">
-                        <input type="submit" value="Виконано" />
-                    </form>
+                    if (trainingTask.IsCompleted)
+                    {
+                        <tr class="task_completed">
+                            <th scope="row">@num</th>
+                            <td>@trainingTask.Date</td>
+                            <td>@trainingTask.Dog.Name</td>
+                            <td>@trainingTask.Context</td>
+                            <td>@trainingTask.Deadline</td>
+
+                            <td>
+                                @if (trainingTask.IsCompleted != true)
+                                {
+                                    <form asp-action="TaskCompleted" asp-route-id="@trainingTask.Id">
+                                        <div class="form-group">
+                                            <input class="btn btn-primary" type="submit" value="Виконано" />
+                                        </div>
+                                    </form>
+                                }
+                                else
+                                {
+                                    <a asp-action="Delete" asp-route-id="@trainingTask.Id">В архів</a>
+                                }
+
+                            </td>
+                        </tr>
+                        num++;
+                    }
+                    else
+                    {
+                        <tr class="task_uncompleted">
+                            <th scope="row">@num</th>
+                            <td>@trainingTask.Date</td>
+                            <td>@trainingTask.Dog.Name</td>
+                            <td>@trainingTask.Context</td>
+                            <td>@trainingTask.Deadline</td>
+
+                            <td>
+                                @if (trainingTask.IsCompleted != true)
+                                {
+                                    <form asp-action="TaskCompleted" asp-route-id="@trainingTask.Id">
+                                        <div class="form-group">
+                                            <input class="btn btn-primary" type="submit" value="Виконано" />
+                                        </div>
+                                    </form>
+                                }
+                                else
+                                {
+                                    <a asp-action="Delete" asp-route-id="@trainingTask.Id">В архів</a>
+                                }
+
+                            </td>
+                        </tr>
+                        num++;
+                    }
                 }
-                else
-                {
-                    <a asp-action="Delete" asp-route-id="@item.Id">В архів</a>
-                }
-            </td>
-        </tr>
-}
-    </tbody>
-</table>
+            }
+        </tbody>
+    </table>
+</div>
