--- a/DogT/Views/Shared/_Admin.cshtml
+++ b/DogT/Views/Shared/_Admin.cshtml
@@ -31,7 +31,7 @@
                                 <a class="nav-link text-dark" asp-area="" asp-controller="Admin" asp-action="Dogs">Тренування</a>
                             </li>
                             <li class="nav-item">
-                                <a class="nav-link text-dark" asp-area="" asp-controller="Admin" asp-action="Dogs">Завдання</a>
+                                <a class="nav-link text-dark" asp-area="" asp-controller="Admin" asp-action="Tasks">Завдання</a>
                             </li>
                             <li class="nav-item">
                                 <a class="nav-link text-dark" asp-area="" asp-controller="Admin" asp-action="Dogs">Новини/пропозиції</a>
